--- a/index.html
+++ b/index.html
@@ -1,27 +1,8 @@
 <html>
 <head>
-	<style>
-
-body {
-	background-color: #000;
-}
-
-
-.logo {
-	height: 200px;
-	width: 200px;
-}
-
-.home .logo {
-	display: block;
-	margin: 0 auto;
-	height: 98vh;
-	width: auto;
-}
-
-	</style>
+	<link rel="stylesheet" href="/css/style.css">
 </head>
 <body class="home">
-	<a href="/"><img src="/images/govpunk.svg" class="logo">
+	<a href="/main.html"><img src="/images/govpunk.svg" class="logo" alt="GOVPUNK"></a>
 </body>
 </html>
